[project]
name = "linefollowerdevkit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncio>=3.4.3",
    "bleak>=0.22.3",
    "ipykernel>=6.29.5",
    "matplotlib>=3.9.2",
    "networkx>=3.4.2",
    "ruff>=0.7.0",
]
